:bug: Modify the title style on mobile

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -32,9 +32,13 @@ iframe {
   }
 }
 
-.hentry h1.entry-title {
+.hentry h1.entry-title,
+.hentry h2.entry-title {
+  font-size: 24px;
+  line-height: 1.35;
+  margin: 6px 0 8px;
   @media #{$medium} {
-    font-size: 28px;
+    font-size: 30px;
   }
 }
 
